@@ -89,4 +89,4 @@ A receive-only APRS-IS "i-gate" with following properties:
      See the INSTALL file.
 
 
-by Matti Aarnio - OH2MQK - oh2mqk-at-sral-fi - 2007-2009
+by Matti Aarnio - OH2MQK - oh2mqk-at-sral-fi - 2007-2010
