@@ -1,3 +1,11 @@
+2010-05-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* digipeater.c:
+	    Improve config error reporting.
+
+	* config.c:
+	    Tolerate config file ending without a newline.
+
 2009-12-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* aprx.c, VERSION: 1.98
